--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 
     <body>
         <h1>Umami Recipes</h1>
+        <img src="images/cooking-papa.jpeg" width="539" height="298"/>
         <ul>
-            <a href="recipes/pizza-toast.html">Pizza Toast</a>
+            <li><a href="recipes/pizza-toast.html">Pizza Toast</a></li>
+            <li><a href="recipes/squid-ink-spagetti.html">Squid Ink Spagetti</a></li>
+            <li><a href="recipes/bell-peppers-and-beef.html">Bell Peppers and Beef</a></li>
         </ul>
     </body>
 </html>
