--- a/recipes/bell-peppers-and-beef.html
+++ b/recipes/bell-peppers-and-beef.html
@@ -25,5 +25,6 @@
             <li>Add mushrooms and cook until golden brown then add soy sauce.</li>
             <li>Plate and serve.</li>
         </ol>
+        <a href="../index.html">Home</a>
     </body>
 </html>
