--- a/recipes/pizza-toast.html
+++ b/recipes/pizza-toast.html
@@ -28,5 +28,6 @@
             <li>Place in the oven and allow to cook until the cheese has melted.</li>
             <li>Remove from the oven and allow to cool for a few minutes before serving.</li>
         </ol>
+        <a href="../index.html">Home</a>
     </body>
 </html>
