--- a/recipes/squid-ink-spagetti.html
+++ b/recipes/squid-ink-spagetti.html
@@ -36,5 +36,6 @@
             <li>Add the cooked pasta, butter, lemon zest, lemon juice and half the reserved pasta cooking water to the skillet with the shrimp & tomatoes. Cook, stirring frequently, 2-3 minutes, or until the pasta is coated in the sauce; season with salt and pepper to taste. (If the sauce seems dry, add in some of the reserved pasta cooking water to achieve your desired consistency.) Turn off the heat and stir in half the basil.</li>
             <li>Garnish with remaining basil and serve.</li>
         </ol>
+        <a href="../index.html">Home</a>
     </body>
 </html>
