update htmls and css

--- a/recipes/bell-peppers-and-beef.html
+++ b/recipes/bell-peppers-and-beef.html
@@ -9,23 +9,27 @@
 
     <body>
         <h1>Bell Peppers and Beef</h1>
-        <img src="../images/bell-peppers-and-beef.png" width="594" height="334" />
+        <div class="image"><img src="../images/bell-peppers-and-beef.png" width="594" height="334" /></div>
         <h2>Description</h2>
         <p>A banging stir fry when your on a budget.</p>
         <h2>Ingredients</h2>
-        <ul>
-            <li>1 Green bell pepper</li>
-            <li>1 Cup mushrooms (sliced)</li>
-            <li>1 Tablespoon soy sauce</li>
-            <li>2 Tablespoons vegetable oil</li>
-        </ul>
+        <div class="list">
+            <ul>
+                <li>1 Green bell pepper</li>
+                <li>1 Cup mushrooms (sliced)</li>
+                <li>1 Tablespoon soy sauce</li>
+                <li>2 Tablespoons vegetable oil</li>
+            </ul>
+        </div>
         <h2>Steps</h2>
-        <ol>
-            <li>Add 2 Tablespoons of vegetable oil in a pan over medium high heat.</li>
-            <li>Add bell peppers and cook for 3-5 minutes.</li>
-            <li>Add mushrooms and cook until golden brown then add soy sauce.</li>
-            <li>Plate and serve.</li>
-        </ol>
-        <a href="../index.html">Home</a>
+        <div class="list">
+            <ol>
+                <li>Add 2 Tablespoons of vegetable oil in a pan over medium high heat.</li>
+                <li>Add bell peppers and cook for 3-5 minutes.</li>
+                <li>Add mushrooms and cook until golden brown then add soy sauce.</li>
+                <li>Plate and serve.</li>
+            </ol>
+            <button><a href="../index.html">Home</a></button>
+        </div>
     </body>
 </html>
