--- a/recipes/pizza-toast.html
+++ b/recipes/pizza-toast.html
@@ -9,26 +9,30 @@
 
     <body>
         <h1>Pizza Toast</h1>
-        <img src="../images/easy-pizza-toast-4.jpg" width="283" height="425" />
+        <div class="image"><img src="../images/easy-pizza-toast-4.jpg" width="283" height="425" /></div>
         <h2>Description</h2>
         <p>A pizza toast that will bring love & peace!</p>
         <h2>Ingredients</h2>
-        <ul>
-            <li>4-8 Slices bread of your choice toasted</li>
-            <li>1 Cup Pizza sauce</li>
-            <li>1-2 Cups grated mozzarella</li>
-            <li>Salami/ toppings of your choice</li>
-           <li>1 Teaspoon oregano</li>
-        </ul>
+        <div class="list">
+            <ul>
+                <li>4-8 Slices bread of your choice toasted</li>
+                <li>1 Cup Pizza sauce</li>
+                <li>1-2 Cups grated mozzarella</li>
+                <li>Salami/ toppings of your choice</li>
+               <li>1 Teaspoon oregano</li>
+            </ul>
+        </div>
         <h2>Steps</h2>
-        <ol>
-            <li>Pre-heat the grill of your oven.</li>
-            <li>Place the toast on a baking sheet and add a generous spoonful of pizza sauce. Spread with the back of the spoon to the corners.</li>
-            <li>Top with a handful of grated mozzarella followed by the toppings of your choice.</li>
-            <li>Sprinkle over a little oregano.</li>
-            <li>Place in the oven and allow to cook until the cheese has melted.</li>
-            <li>Remove from the oven and allow to cool for a few minutes before serving.</li>
-        </ol>
-        <a href="../index.html">Home</a>
+        <div class="list">
+            <ol>
+                <li>Pre-heat the grill of your oven.</li>
+                <li>Place the toast on a baking sheet and add a generous spoonful of pizza sauce. Spread with the back of the spoon to the corners.</li>
+                <li>Top with a handful of grated mozzarella followed by the toppings of your choice.</li>
+                <li>Sprinkle over a little oregano.</li>
+                <li>Place in the oven and allow to cook until the cheese has melted.</li>
+                <li>Remove from the oven and allow to cool for a few minutes before serving.</li>
+            </ol>
+           <button> <a href="../index.html">Home</a></button>
+        </div>
     </body>
 </html>
