--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
     <body>
         <h1>Umami Recipes</h1>
-        <img src="images/cooking-papa.jpeg" width="539" height="298"/>
-        <ul>
-            <li><a href="recipes/pizza-toast.html">Pizza Toast</a></li>
-            <li><a href="recipes/squid-ink-spagetti.html">Squid Ink Spagetti</a></li>
-            <li><a href="recipes/bell-peppers-and-beef.html">Bell Peppers and Beef</a></li>
-        </ul>
+        <div class="image"><img src="images/cooking-papa.jpeg" width="539" height="298"/></div>
+        <div class="recipes-buttons">
+            <button><a href="recipes/pizza-toast.html">Pizza Toast</a></button>
+            <button><a href="recipes/squid-ink-spagetti.html">Squid Ink Spagetti</a></button>
+            <button><a href="recipes/bell-peppers-and-beef.html">Bell Peppers and Beef</a></button>
+        </div>
     </body>
 </html>
