--- a/recipes/squid-ink-spagetti.html
+++ b/recipes/squid-ink-spagetti.html
@@ -9,34 +9,38 @@
 
     <body>
         <h1>Squid Ink Spagetti</h1>
-        <img src="../images/squid-ink-pasta-7.jpg" width="341" height="512" />
+        <div class="image"><img src="../images/squid-ink-pasta-7.jpg" width="341" height="512" /></div>
         <h2>Description</h2>
         <p>A pasta dish that will make you say "OH MY GOD"!</p>
         <h2>Ingredients</h2>
-        <ul>
-            <li>12 ounces squid ink pasta</li>
-            <li>1 pound shrimp</li>
-            <li>1 Tablespoon extra virgin olive oil</li>
-            <li>6 cloves garlic</li>
-           <li>2 Tablespoons tomato paste</li>
-           <li>10 ounces cherry tomatoes (halved)</li>
-           <li>1/3 cup white wine</li>
-           <li>1/2 teaspoon red pepper flakes</li>
-           <li>2 lemons (zested and juiced)</li>
-           <li>1/2 cup chopped basil</li>
-           <li>4 Tablespoons butter</li>
-           <li>Salt</li>
-           <li>Ground black pepper</li>
-        </ul>
+        <div class="list">
+            <ul>
+                <li>12 ounces squid ink pasta</li>
+                <li>1 pound shrimp</li>
+                <li>1 Tablespoon extra virgin olive oil</li>
+                <li>6 cloves garlic</li>
+                <li>2 Tablespoons tomato paste</li>
+                <li>10 ounces cherry tomatoes (halved)</li>
+                <li>1/3 cup white wine</li>
+                <li>1/2 teaspoon red pepper flakes</li>
+                <li>2 lemons (zested and juiced)</li>
+                <li>1/2 cup chopped basil</li>
+                <li>4 Tablespoons butter</li>
+                <li>Salt</li>
+                <li>Ground black pepper</li>
+            </ul>
+        </div>
         <h2>Steps</h2>
-        <ol>
-            <li>Bring a large pot of salted water to a boil.</li>
-            <li>In a large skillet heat olive oil on medium-high heat until hot. Add the garlic. Cook, stirring occasionally, 1-2 minutes, or until lightly browned and fragrant. Add the tomato paste. Cook, stirring frequently, 30 seconds to 1 minute, or until dark red. Add the cherry tomatoes, white wine, ¼ cup water and red pepper flakes; season with salt and pepper. Cook, stirring occasionally, 3 to 5 minutes, or until tomatoes are softened.</li>
-            <li>Cook the pasta to al dente, reserving ½ cup of the pasta cooking water, drain the pasta.</li>
-            <li>While the pasta cooks, add the shrimp to tomatoes; season with salt and pepper. Cook, stirring occasionally, 2 to 3 minutes, or until cooked. </li>
-            <li>Add the cooked pasta, butter, lemon zest, lemon juice and half the reserved pasta cooking water to the skillet with the shrimp & tomatoes. Cook, stirring frequently, 2-3 minutes, or until the pasta is coated in the sauce; season with salt and pepper to taste. (If the sauce seems dry, add in some of the reserved pasta cooking water to achieve your desired consistency.) Turn off the heat and stir in half the basil.</li>
-            <li>Garnish with remaining basil and serve.</li>
-        </ol>
-        <a href="../index.html">Home</a>
+        <div class="list">
+            <ol>
+                <li>Bring a large pot of salted water to a boil.</li>
+                <li>In a large skillet heat olive oil on medium-high heat until hot. Add the garlic. Cook, stirring occasionally, 1-2 minutes, or until lightly browned and fragrant. Add the tomato paste. Cook, stirring frequently, 30 seconds to 1 minute, or until dark red. Add the cherry tomatoes, white wine, ¼ cup water and red pepper flakes; season with salt and pepper. Cook, stirring occasionally, 3 to 5 minutes, or until tomatoes are softened.</li>
+                <li>Cook the pasta to al dente, reserving ½ cup of the pasta cooking water, drain the pasta.</li>
+                <li>While the pasta cooks, add the shrimp to tomatoes; season with salt and pepper. Cook, stirring occasionally, 2 to 3 minutes, or until cooked. </li>
+                <li>Add the cooked pasta, butter, lemon zest, lemon juice and half the reserved pasta cooking water to the skillet with the shrimp & tomatoes. Cook, stirring frequently, 2-3 minutes, or until the pasta is coated in the sauce; season with salt and pepper to taste. (If the sauce seems dry, add in some of the reserved pasta cooking water to achieve your desired consistency.) Turn off the heat and stir in half the basil.</li>
+                <li>Garnish with remaining basil and serve.</li>
+            </ol>
+            <button><a href="../index.html">Home</a></button>
+        </div>
     </body>
 </html>
